--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Javascript Calculator</title>
 </head>
-<body>
+<body id="body-one">
+    <h1 id="title">Javascript Calculator</h1>
     <div class="calculator">
         <div class="calculator-screen">
             <h3 id="display" value="0">0</h3>
